--- a/index.html
+++ b/index.html
@@ -4,36 +4,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vins Marinho</title>
+    <title>Vins Marinho - Domaine Anthony Marinho</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenue chez Vins Marinho</h1>
+        <h1>Domaine Anthony Marinho</h1>
         <nav>
             <ul>
-                <li><a href="#about">À propos</a></li>
-                <li><a href="#products">Nos Vins</a></li>
+                <li><a href="#accueil">Accueil</a></li>
+                <li><a href="#boutique">Boutique</a></li>
+                <li><a href="#apropos">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <section id="about">
+        <section id="accueil" class="hero">
+            <h2>Le goût du terroir, l’excellence dans chaque bouteille</h2>
+            <p>Vins authentiques du Beaujolais : Beaujolais-Villages, Fleurie & La Madone</p>
+        </section>
+
+        <section id="boutique" class="products">
+            <h2>Nos vins</h2>
+            <div class="product">
+                <h3>Beaujolais-Villages 2024</h3>
+                <img src="images/beaujolais.jpg" alt="Beaujolais-Villages">
+                <p>Un vin fruité et accessible, parfait pour vos repas entre amis.</p>
+                <p><strong>8,50 €</strong></p>
+            </div>
+            <div class="product">
+                <h3>Fleurie 2024</h3>
+                <img src="images/fleurie.jpg" alt="Fleurie">
+                <p>Un vin élégant aux notes florales et fruitées.</p>
+                <p><strong>9,50 €</strong></p>
+            </div>
+            <div class="product">
+                <h3>Fleurie La Madone 2024</h3>
+                <img src="images/la-madone.jpg" alt="Fleurie La Madone">
+                <p>Notre cuvée phare, raffinée et médaillée d’argent.</p>
+                <p><strong>10,00 €</strong></p>
+            </div>
+        </section>
+
+        <section id="avis" class="reviews">
+            <h2>Avis clients</h2>
+            <blockquote>“Un Fleurie tout en finesse, parfait pour notre dîner en amoureux. On en a recommandé une caisse !”<br><em>– Julien B.</em></blockquote>
+            <blockquote>“Très belle découverte ! Le Beaujolais-Villages est fruité et équilibré. Livraison rapide et super contact avec le producteur.”<br><em>– Sophie L.</em></blockquote>
+            <blockquote>“Le Fleurie La Madone est une merveille, tout simplement. C’est devenu mon incontournable à chaque repas de famille.”<br><em>– Marc T.</em></blockquote>
+        </section>
+
+        <section id="apropos" class="about">
             <h2>À propos</h2>
-            <p>Nous sommes passionnés par le vin depuis des générations.</p>
+            <p>Le Domaine Anthony Marinho cultive la passion du vin depuis plusieurs générations au cœur du Beaujolais. Nos cuvées sont élaborées avec soin et respect du terroir pour offrir une expérience unique à chaque dégustation.</p>
         </section>
-        <section id="products">
-            <h2>Nos Vins</h2>
-            <p>Découvrez notre sélection exclusive de vins.</p>
-        </section>
-        <section id="contact">
+
+        <section id="contact" class="contact">
             <h2>Contact</h2>
-            <p>Email : contact@vinsmarinho.com</p>
+            <p>Pour toute commande ou question :</p>
+            <ul>
+                <li>Email : anthonymarinho69@gmail.com</li>
+            </ul>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Vins Marinho. Tous droits réservés.</p>
+        <p>&copy; 2024 Domaine Anthony Marinho - Tous droits réservés</p>
     </footer>
 </body>
 </html>
