--- a/index.html
+++ b/index.html
@@ -4,73 +4,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vins Marinho - Domaine Anthony Marinho</title>
+    <title>Domaine Anthony Marinho - Vins du Beaujolais</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Vins du Beaujolais - Fleurie, Beaujolais-Villages - Direct producteur. Découvrez un domaine passionné et primé.">
 </head>
 <body>
-    <header>
-        <h1>Domaine Anthony Marinho</h1>
-        <nav>
-            <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#boutique">Boutique</a></li>
-                <li><a href="#apropos">À propos</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<header>
+    <h1>Domaine Anthony Marinho</h1>
+    <nav>
+        <ul>
+            <li><a href="#accueil">Accueil</a></li>
+            <li><a href="#vins">Nos Vins</a></li>
+            <li><a href="#histoire">Notre Histoire</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-    <main>
-        <section id="accueil" class="hero">
-            <h2>Le goût du terroir, l’excellence dans chaque bouteille</h2>
-            <p>Vins authentiques du Beaujolais : Beaujolais-Villages, Fleurie & La Madone</p>
-        </section>
+<section id="accueil">
+    <h2>Le goût du terroir, l’excellence en bouteille</h2>
+    <p>Bienvenue au Domaine Anthony Marinho, où la passion du Beaujolais s’exprime dans chaque cuvée. Nos vins, issus d’un travail artisanal, reflètent l’authenticité et la finesse de notre terroir. De la vigne à la bouteille, tout est fait avec soin, dans le respect des traditions et de la nature.</p>
+</section>
 
-        <section id="boutique" class="products">
-            <h2>Nos vins</h2>
-            <div class="product">
-                <h3>Beaujolais-Villages 2024</h3>
-                <img src="images/beaujolais.jpg" alt="Beaujolais-Villages">
-                <p>Un vin fruité et accessible, parfait pour vos repas entre amis.</p>
-                <p><strong>8,50 €</strong></p>
-            </div>
-            <div class="product">
-                <h3>Fleurie 2024</h3>
-                <img src="images/fleurie.jpg" alt="Fleurie">
-                <p>Un vin élégant aux notes florales et fruitées.</p>
-                <p><strong>9,50 €</strong></p>
-            </div>
-            <div class="product">
-                <h3>Fleurie La Madone 2024</h3>
-                <img src="images/la-madone.jpg" alt="Fleurie La Madone">
-                <p>Notre cuvée phare, raffinée et médaillée d’argent.</p>
-                <p><strong>10,00 €</strong></p>
-            </div>
-        </section>
+<section id="vins">
+    <h2>Nos Vins</h2>
 
-        <section id="avis" class="reviews">
-            <h2>Avis clients</h2>
-            <blockquote>“Un Fleurie tout en finesse, parfait pour notre dîner en amoureux. On en a recommandé une caisse !”<br><em>– Julien B.</em></blockquote>
-            <blockquote>“Très belle découverte ! Le Beaujolais-Villages est fruité et équilibré. Livraison rapide et super contact avec le producteur.”<br><em>– Sophie L.</em></blockquote>
-            <blockquote>“Le Fleurie La Madone est une merveille, tout simplement. C’est devenu mon incontournable à chaque repas de famille.”<br><em>– Marc T.</em></blockquote>
-        </section>
+    <div class="vin">
+        <h3>Beaujolais-Villages 2024 – 8,50 €</h3>
+        <img src="images/beaujolais.jpg" alt="Beaujolais-Villages">
+        <p><strong>Robe :</strong> Rouge vif, reflets grenat. <br>
+        <strong>Nez :</strong> Fruits rouges frais – cerise, fraise, groseille.<br>
+        <strong>Bouche :</strong> Franc, souple, légèrement poivré.<br>
+        <strong>Accords :</strong> Charcuteries, grillades, fromages doux.<br>
+        <strong>Service :</strong> 13–14°C – Garde : 2 à 4 ans<br><br>
+        Médaille d’argent – Concours International du Gamay 2025.<br><em>"Un vin franc et fruité, parfait pour les moments simples et sincères."</em></p>
+    </div>
 
-        <section id="apropos" class="about">
-            <h2>À propos</h2>
-            <p>Le Domaine Anthony Marinho cultive la passion du vin depuis plusieurs générations au cœur du Beaujolais. Nos cuvées sont élaborées avec soin et respect du terroir pour offrir une expérience unique à chaque dégustation.</p>
-        </section>
+    <div class="vin">
+        <h3>Fleurie 2024 – 9,50 €</h3>
+        <img src="images/fleurie.jpg" alt="Fleurie">
+        <p><strong>Robe :</strong> Rubis profond. <br>
+        <strong>Nez :</strong> Violette, pivoine, framboise.<br>
+        <strong>Bouche :</strong> Soyeuse, tanins fins, finale florale.<br>
+        <strong>Accords :</strong> Volaille, chèvre affiné, légumes grillés.<br>
+        <strong>Service :</strong> 14–16°C – Garde : 3 à 5 ans<br><br>
+        <em>"Un Fleurie tout en finesse et élégance, parfait sur une belle volaille." – François M."</em></p>
+    </div>
 
-        <section id="contact" class="contact">
-            <h2>Contact</h2>
-            <p>Pour toute commande ou question :</p>
-            <ul>
-                <li>Email : anthonymarinho69@gmail.com</li>
-            </ul>
-        </section>
-    </main>
+    <div class="vin">
+        <h3>Fleurie La Madone – 10,00 €</h3>
+        <p><strong>Cuvée en préparation.</strong><br>
+        Issue de nos plus belles parcelles exposées plein sud, cette cuvée rend hommage à la Vierge qui surplombe Fleurie. Vin de caractère, élevé avec patience. <br><br>
+        <em>Sortie prévue : Automne 2025 – Quantité limitée.</em></p>
+    </div>
+</section>
 
-    <footer>
-        <p>&copy; 2024 Domaine Anthony Marinho - Tous droits réservés</p>
-    </footer>
+<section id="histoire">
+    <h2>Notre Histoire</h2>
+    <p>Je suis Anthony Marinho, vigneron indépendant. Tout commence dans les collines du Beaujolais, là où la vigne pousse au rythme des saisons. Fils de passionnés, j’ai grandi entre les ceps et les vendanges, et j’ai appris à respecter la terre avant de la cultiver.</p>
+    <p>En 2023, je crée mon propre domaine avec un rêve simple : faire du vin vrai, sincère, sans tricher. Deux ans plus tard, ma première cuvée est récompensée par une médaille d’argent. Ce n’est pas une fin, mais le début d’une aventure.</p>
+    <p>Aujourd’hui, je veux partager ce travail, cette passion, cette terre. Parce que le vin, c’est une histoire de cœur, et que chaque bouteille est faite pour rassembler.</p>
+</section>
+
+<section id="contact">
+    <h2>Contact</h2>
+    <p>Pour toute commande, question ou pré-réservation :</p>
+    <p><a href="mailto:anthonymarinho69@gmail.com">anthonymarinho69@gmail.com</a></p>
+</section>
+
+<footer>
+    <p>© 2025 Domaine Anthony Marinho. Tous droits réservés.</p>
+</footer>
 </body>
 </html>
